SERVER-22016 Support rolling back certain applyOps oplog entries in replication.

Specifically, support rolling back insert, update and delete applyOps operations
such as those generated by sharding's moveChunk, splitChunk and mergeChunks
operations.